--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "express-handlebars": "^3.0.2",
     "mongoose": "^5.4.19",
     "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^5.15.3"
   }
 }
